--- a/Exercicios/003/style.css
+++ b/Exercicios/003/style.css
@@ -5,6 +5,11 @@ body{
     margin: 0px;
     overflow-x: hidden;
 }
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
 ul{
     display: inline-flex;
     width: 950px;
@@ -14,13 +19,18 @@ ul{
     text-align: justify;
 }
 h1{
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
     height: 100px;
     text-align: center;
     color: aliceblue;
     
 }
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+}
 p{
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
 }
 main{
