--- a/Exercicios/0026/mq004/estilos/media-query.css
+++ b/Exercicios/0026/mq004/estilos/media-query.css
@@ -2,6 +2,85 @@
 
 /*Todas demais midias*/
 
-@media print {
+/*Typical Device Breakpoints
+-------------------------------
+pequenas telas: até 600px
+celular: de 600px até 768px
+tablet: 768px até 992px
+Desktop:992px até 1200px
+Grandes telas: acima de 1200px
+*/
+
+@media print { /* IMPRESSÃO */
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
     
+    body {
+        background-image: url(../imagens/back-print.jpg);
+        
+    }
+
+    main {
+        border: 2px solid black;
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    img#telefone { display: none; }
+    img#tablet { display: none; }
+    img#impressora { display: block; }
+    img#desktop { display: none; }
+    img#tv { display: none; }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) { /* TABLET */
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+
+    }
+
+    img#telefone { display: none; }
+    img#tablet { display: block; }
+    img#impressora { display: none; }
+    img#desktop { display: none; }
+    img#tv { display: none; }
+} 
+
+@media screen and (min-width: 992px) and (max-width: 1200px) { /* DESKTOP */
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#telefone { display: none; }
+    img#tablet { display: none; }
+    img#impressora { display: none; }
+    img#desktop { display: block; }
+    img#tv { display: none; }
+
+}
+
+@media screen and (min-width: 1200px) { /* GRANDES TELAS */
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    main {
+        width: 700px;
+    }
+
+
+    img#telefone { display: none; }
+    img#tablet { display: none; }
+    img#impressora { display: none; }
+    img#desktop { display: none; }
+    img#tv { display: block; }
+
+
+
+
+
 }
