--- a/Exercicios/0026/mq005/estilos/style.css
+++ b/Exercicios/0026/mq005/estilos/style.css
@@ -20,8 +20,22 @@ header > h1 {
     background-color: gray;
 }
 
-menu {
+i#burguer {
+    background-color: rgb(48, 48, 48);
+    color: white;
     display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+i#burguer:hover {
+    background-color: white;
+    color: black;
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
